@@ -8,6 +8,7 @@ munin (work)
   * Munin-run: Now behaves properly when running invalid plugins (SF#1074242).
   * Munin-node: host_name in plugin-conf.d now overrides plugin output.
   * Munin-graph: Added "graph_period" option, to make "graph_sums" usable.
+  * Munin-update: Fix bug when setting min to 0.
   * Plugin: New version of generic/smart_ by plugin creator (Nicolas
     Stransky) (SF#1072459).
   * Plugin: generic/uptime was re-classified as linux/uptime (SF#1074576).
